--- a/config/public/index.html
+++ b/config/public/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h2>this is a HTML File</h2>
+    <h2>User Registration</h2>
 
     <script type="module" src="../dist/index.js"></script>
   </body>
